--- a/edit.html
+++ b/edit.html
@@ -25,8 +25,8 @@
             <div class="nav-wrapper ">
                 <a href="#" class="brand-logo right"><i class="fa fa-retweet"></i></a>
                 <ul id="nav-mobile" class="left hide-on-med-and-down">
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="">About </a></li>
+                    <li><a href="index.html">HOME</a></li>
+                    <li><a href="">ABOUT </a></li>
                     <li><a href="bom.html">BOM</a></li>
                 </ul>
             </div>
